Update Handler and test Swagger For Login Register and Get Profile
